********** SPL 2.0 Alpha 9 **********
===== Build 0103 2019/11/01 =====

* Rework on memory management system:
    * Spl memory management now takes control of the pointer system
    * Environments now only stores pointers
    * Environments stores a list of children environments
    * Garbage collection system
* Removed attribute "this" from class instance, "this" is now a keyword
* New native functions:
    * gc
    * memory_view

********** SPL 2.0 Alpha 8 **********
===== Build 0102 2019/10/30 =====

* Rework on import system:
    * Syntax change of custom library importing: using path instead of package names
        * import "xx/yy/zz.sp"
    * The default import name is the file's name
* Bug fixes:
    * Operator 'instanceof' causes error if the target class is not reachable

********** SPL 2.0 Alpha 7 **********
===== Build 0101 2019/10/29 =====

* Library updates:
    * sgl
* Renamed independent function names in lowerCamelCase
* Moved some native independent functions into module 'os'
* Native invokes updates:
    * os.list_files
    * os.f_open
    * os.exec
    * os.exit
    * natives.input
* Rewritten function "main"
* New library functions:
    * input

********** SPL 2.0 Alpha 6 **********
===== Build 0100 2019/10/21 =====

* Implemented "String" in spl:
    * The python part is renamed to "CharArray"
* Bug fixes:
    * Fixed that the right side of "instanceof" not referencable in class itself
    * Fixed a long existing bug: loops will continue execute lines after "break" or "continue"
* New built-in function:
    * round
    * non_null_else
* More spl exceptions
* Even slower

********** SPL 2.0 Alpha 5 **********
===== Build 0099 2019/10/19 =====

* New library:
    * stats.sp:
        * Statistical classes and functions
* New method of native types:
    * String.split
    * String.is_number
* New method of built-in types:
    * List.sublist
* Environment optimization:
    * Completely removed the heap-variable in global scope
* Optimization: