@@ -1,3 +1,3 @@
-memory_size=1048576
-gc_threshold=262144
-gc_gap=16384
+memory_size=1024
+gc_threshold=256
+gc_gap=16
